src/assets/styles/components/_components.header.scss
.c-header {
    @include position(fixed, 0 0 none 0);
    align-items: center;
    background-color: $color-white;
    box-shadow: 0 2px 4px 0 $color-grey-dark;
    display: flex;
    height: 50px;
    justify-content: space-between;
    padding: 10px;
    flex-shrink: 0;
    z-index: $z-index-header;
    position: fixed;
}

.c-header__logo {
    height: 20px;
    display: block;
}

.c-header__nav {
    @include mq($from: xs, $until: s) {
        display: none;
    }

    @include mq($from: s) {
        display: block;
    }
}

.c-header__burger {
    @include size(30px);
    font-size: 20px;
    display: flex;
    align-items: center;
    justify-content: space-around;

    @include mq($from: s) {
        display: none;
    }
}

.c-header__nav-item {
    color: #4a4a4a;
    margin-right: $spacing-lg;
    text-decoration: none;

    &:last-child {
        margin-right: 0;
    }
}

.c-header__nav-item--featured {
    background-color: $color-brand;
    border-radius: 20px;
    color: $color-white;
    padding: $spacing-xxs $spacing-sm;
}

